--- a/gtk/src/light/gtk-3.0/_colors.scss
+++ b/gtk/src/light/gtk-3.0/_colors.scss
@@ -3,13 +3,13 @@
 
 @import 'pop_os-colors';
 
-$base_color: if($variant == 'light', #ffffff, #272727); 
+$base_color: if($variant == 'light', #ffffff, #272727);
 $text_color: if($variant == 'light', #272727, #cccccc);
 $bg_color: if($variant == 'light', #F6F6F6, #303030);
 $fg_color: if($variant == 'light', #292929, #cccccc);
 
 $selected_fg_color: #000;
-$selected_bg_color: if($variant=='light', #48b9c7, #94EBEB);
+$selected_bg_color: if($variant=='light', #feb573, #feb573);
 
 $selected_borders_color: if($variant== 'light', darken($selected_bg_color, 15%), darken($selected_bg_color, 30%));
 $borders_color: if($variant == 'light', rgba(darken($bg_color, 18%), 0.5), rgba(darken($bg_color, 10%), 0.5));
@@ -31,7 +31,7 @@ $scrollbar_slider_active_color: if($variant=='light', darken($selected_bg_color,
 
 $warning_color: if($variant=='light', #FEDB40, #FFF19E);
 $error_color: if($variant=='light', #E56A54, #EA9090);
-$success_color: if($variant=='light', #82BF8C, #90CFB0);
+$success_color: if($variant=='light', #feb573, #feb573);
 $destructive_color: if($variant=='light', #E56A54, #EA9090);
 
 $osd_fg_color: #eeeeec;
@@ -71,9 +71,9 @@ $backdrop_scrollbar_slider_color: mix($backdrop_fg_color, $backdrop_bg_color, 40
 $backdrop_menu_color: if($variant == 'light', $backdrop_base_color, mix($backdrop_bg_color, $backdrop_base_color, 20%));
 
 //special cased widget colors
-$suggested_bg_color: if($variant=='light', #82BF8C, #90CFB0);
+$suggested_bg_color: if($variant=='light', #feb573, #feb573);
 $suggested_border_color: if($variant=='light', darken($suggested_bg_color, 15%), $suggested_bg_color);
-$progress_bg_color: if($variant=='light', #63B1BC, #6ACAD8);
+$progress_bg_color: if($variant=='light', #feb573, #feb573);
 $progress_border_color: if($variant=='light', darken($progress_bg_color, 15%), darken($progress_bg_color, 30%));
 $checkradio_bg_color: if($variant=='light', #FFAD00, #FBB86C);
 $checkradio_fg_color: #000;
