--- a/gtk/src/light/gtk-4.0/_colors.scss
+++ b/gtk/src/light/gtk-4.0/_colors.scss
@@ -27,7 +27,7 @@ $scrollbar_slider_active_color: if($variant=='light', darken($selected_bg_color,
 
 $warning_color: #f57900;
 $error_color: #cc0000;
-$success_color: if($variant == 'light', #33d17a, darken(#33d17a, 10%));
+$success_color: if($variant == 'light', #33d17a, darken(#feb573, 10%));
 $destructive_color: if($variant == 'light', #e01b24, darken(#e01b24, 10%));
 
 $osd_fg_color: #eeeeec;
@@ -42,7 +42,7 @@ $sidebar_bg_color: mix($bg_color, $base_color, 50%);
 $tooltip_borders_color: transparentize(white, 0.9);
 $shadow_color: transparentize(black, 0.9);
 
-$drop_target_color: if($variant == 'light', #2ec27e, #26a269);
+$drop_target_color: if($variant == 'light', #2ec27e, #feb573);
 
 //insensitive state derived colors
 $insensitive_fg_color: mix($fg_color, $bg_color, 50%);
