style: set new colors

--- a/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
@@ -8,7 +8,7 @@ $search_entry_width: 320px;
 $search_entry_height: 36px;
 $search_entry_bg: #F6F6F6;
 $search_entry_fg: #2B2928;
-$search_entry_selection: #63B1BC;
+$search_entry_selection: #FFAD00;
 
 %search_entry,
 .search-entry {
@@ -43,7 +43,7 @@ $search_entry_selection: #63B1BC;
     color: transparentize($search_entry_fg, 0.3);
   }
 
-  .search-entry-icon { 
+  .search-entry-icon {
     icon-size: $base_icon_size;
     padding: 0 4px;
     color: inherit;
