--- a/gtk/src/light/gtk-3.0/_ubuntu-colors.scss
+++ b/gtk/src/light/gtk-3.0/_ubuntu-colors.scss
@@ -14,8 +14,8 @@ $ash: #878787;
 $red: if($variant=='light', #E56A54, #EA9090);
 $orange: if($variant=='light', #FFAD00, #FBB86C);
 $yellow: if($variant=='light', #FEDB40, #F9D87A);
-$green: if($variant=='light', #82BF8C, #90CFB0);
-$blue: if($variant=='light', #63B1BC, #6ACAD8);
+$green: if($variant=='light', #FFAD00, #FBB86C);
+$blue: if($variant=='light', #FFAD00, #FEB573);
 $purple: if($variant=='light', #CF7DFF, #D58CFF);
 
 // Terminal colors
