--- a/gnome-shell/src/gnome-shell-sass/_colors.scss
+++ b/gnome-shell/src/gnome-shell-sass/_colors.scss
@@ -3,7 +3,7 @@
 @import "ubuntu-colors";
 @import "pop_os_colors";
 
-$base_color: if($variant == 'light', #ffffff, #2B2928); 
+$base_color: if($variant == 'light', #ffffff, #2B2928);
 $text_color: if($variant == 'light', black, white);
 $bg_color: if($variant == 'light', #F6F6F6, #33302F);
 $fg_color: if($variant == 'light', #2B2928, #E6E6E6);
@@ -12,7 +12,7 @@ $dark_bg_color: $dark_ui_700;
 $dark_fg_color: $light_ui_300;
 
 $selected_fg_color: #000;
-$selected_bg_color: if($variant=='light', #63B1BC, #94EBEB);
+$selected_bg_color: if($variant=='light', #FFAD00, #FEB573);
 
 $selected_borders_color: if($variant== 'light', darken($selected_bg_color, 15%), darken($selected_bg_color, 30%));
 $borders_color: if($variant == 'light', rgba(darken($bg_color, 18%), 0.5), rgba(darken($bg_color, 10%), 0.5));
@@ -23,7 +23,7 @@ $top_hilight: $borders_edge;
 
 $warning_color: $text_yellow;
 $error_color: $text_red;
-$success_color: if($variant=='light', #82BF8C, #90CFB0);
+$success_color: if($variant=='light', #FFAD00, #FBB86C);
 $destructive_color: if($variant=='light', #E56A54, #EA9090);
 
 $osd_fg_color: $light_ui_300;
