--- a/gtk/src/light/gtk-3.0/granite/_storage-bar.scss
+++ b/gtk/src/light/gtk-3.0/granite/_storage-bar.scss
@@ -1,6 +1,6 @@
 // This file is part of the Pop!_GTK Theme.
 // See gtk.scss for full license and copyright information
-/* 
+/*
  * _storage-bar.scss - Storage Bar widget for dividing storage space
  *
  * File credits: Ian Santopietro <isantop@gmail.com>
@@ -15,7 +15,7 @@
     background-image: none;
     box-shadow: $shadow_2;
   }
-  
+
   .fill-block {
     padding: $small_padding $tiny_padding;
     border: $border_size solid rgba(black, 0.35);
@@ -26,19 +26,19 @@
     border-radius: 0;
     border-bottom-color: darken($borders_color, 35%);
     background-color: darken($base_color, 15%);
-    
+
     &:first-child {
       border-radius: $corner_radius 0 0;
     }
-    
+
     &:last-child {
       border-radius: 0 $corner_radius 0 0;
     }
-    
+
     &:only-child {
       border-radius: $corner_radius $corner_radius 0 0;
     }
-    
+
     image {
       -gtk-icon-style: symbolic;
     }
@@ -48,7 +48,7 @@
     border-bottom-width: $border_size;
     border-bottom-color: darken($borders_color, 40%);
     background-color: darken($base_color, 5%);
-    
+
     image {
       color: black;
     }
@@ -58,7 +58,7 @@
     border-bottom-width: $border_size;
     border-bottom-color: darken(#CF7DFF, 30%);
     background-color: #CF7DFF;
-    
+
     image {
       color: white;
     }
@@ -68,7 +68,7 @@
     border-bottom-width: $border_size;
     border-bottom-color: darken(#FFAD00, 20%);
     background-color: #FFAD00;
-    
+
     image {
       color: black;
     }
@@ -76,9 +76,9 @@
 
   .files {
     border-bottom-width: $border_size;
-    border-bottom-color: darken(#63B1BC, 20%);
-    background-color: #63B1BC;
-    
+    border-bottom-color: darken(#FFAD00, 20%);
+    background-color: #FFAD00;
+
     image {
       color: black;
     }
@@ -86,9 +86,9 @@
 
   .photo {
     border-bottom-width: $border_size;
-    border-bottom-color: darken(#82BF8C, 30%);
-    background-color: #82BF8C;
-    
+    border-bottom-color: darken(#FFAD00, 30%);
+    background-color: #FFAD00;
+
     image {
       color: black;
     }
@@ -98,7 +98,7 @@
     border-bottom-width: $border_size;
     border-bottom-color: darken(#E56A54, 20%);
     background-color: #E56A54;
-    
+
     image {
       color: white;
     }
@@ -107,126 +107,126 @@
   .legend {
     padding: $small_padding;
     border-radius: 50%;
-    
+
     image {
       color: black;
     }
   }
-  
+
   .disk-bar {
     padding: 0;
-    border-radius: $corner_radius;   
-    background-color: #ADA29E; 
-  } 
+    border-radius: $corner_radius;
+    background-color: #ADA29E;
+  }
 
-  .ext2, .ext3, .ext4, .fat16, .fat32, .btrfs, 
+  .ext2, .ext3, .ext4, .fat16, .fat32, .btrfs,
   .xfs,  .ntfs, .luks, .lvm,   .none,  .swap , .unused {
     // sass-lint:disable-block indentation
     border: none;
-    box-shadow: 
+    box-shadow:
       inset 0 -2px rgba(#574F4A, 0.5),
       inset 1px 0 rgba(#574F4A, 0.5),
       inset -1px 0 rgba(#574F4A, 0.5);
   }
 
-  .swap { 
-    background-color: #A0252B; 
-    
+  .swap {
+    background-color: #A0252B;
+
     image {
       color: white;
     }
   }
 
-  .ext4 { 
-    background-color: #82BF8C; 
-    
+  .ext4 {
+    background-color: #FFAD00;
+
     image {
       color: black;
     }
   }
 
-  .ext3 { 
-    background-color: #3B6E43; 
-    
+  .ext3 {
+    background-color: #FFAD00;
+
     image {
       color: white;
     }
   }
 
-  .ext2 { 
-    background-color: #90CFB0; 
-    
+  .ext2 {
+    background-color: #FBB86C;
+
     image {
       color: black;
     }
   }
 
-  .fat16, 
-  .fat32 { 
-    background-color: #FEDB40; 
-    
+  .fat16,
+  .fat32 {
+    background-color: #FEDB40;
+
     image {
       color: black;
     }
   }
 
-  .btrfs { 
-    background-color: #00496D; 
-    
+  .btrfs {
+    background-color: #00496D;
+
     image {
       color: white;
     }
   }
 
-  .xfs { 
-    background-color: #95C4FC; 
-    
+  .xfs {
+    background-color: #95C4FC;
+
     image {
       color: black;
     }
   }
 
-  .ntfs { 
-    background-color: #FFAD00; 
-    
+  .ntfs {
+    background-color: #FFAD00;
+
     image {
       color: black;
     }
   }
 
-  .luks { 
-    background-color: #E5B3FF; 
-    
+  .luks {
+    background-color: #E5B3FF;
+
     image {
       color: black;
     }
   }
 
-  .lvm { 
-    background-color: #CF7DFF; 
-    
+  .lvm {
+    background-color: #CF7DFF;
+
     image {
       color: black;
     }
   }
 
-  .none { 
-    background-color: #63B1BC; 
-    
+  .none {
+    background-color: #FFAD00;
+
     image {
       color: black;
     }
   }
 
-  .unused { 
-    background-color: #ADA29E; 
-    
+  .unused {
+    background-color: #ADA29E;
+
     image {
       color: black;
     }
   }
-  
-  .legend { 
-    box-shadow: none; 
+
+  .legend {
+    box-shadow: none;
   }
 }
