--- a/gnome-shell/upstream/gnome-shell-high-contrast.scss
+++ b/gnome-shell/upstream/gnome-shell-high-contrast.scss
@@ -12,8 +12,8 @@ stage {
 
 .toggle-switch { width: 48px; }
 .toggle-switch-us, .toggle-switch-intl {
-	background-image: url("resource:///org/gnome/shell/theme/toggle-off-hc.svg");
-	&:checked { background-image: url("resource:///org/gnome/shell/theme/toggle-on-hc.svg"); }
+	background-image: url("toggle-off-hc.svg");
+	&:checked { background-image: url("toggle-on-hc.svg"); }
 }
 
 //force opaque panel
