--- a/gnome-shell/upstream/gnome-shell-sass/widgets/_calendar.scss
+++ b/gnome-shell/upstream/gnome-shell-sass/widgets/_calendar.scss
@@ -153,7 +153,7 @@
   }
 
   .calendar-day-with-events {
-    background-image: url("resource:///org/gnome/shell/theme/calendar-today.svg");
+    background-image: url("calendar-today.svg");
     &.calendar-work-day {
        color: lighten($fg_color,10%);
        font-weight: bold;
@@ -168,7 +168,7 @@
     @include fontsize($base_font_size - 4);
     font-weight: bold;
     height: 1.8em;
-    width: 2.3em; 
+    width: 2.3em;
     border-radius: 2px;
     margin: 6px;
     background-color: darken($bg_color, 2%);
