--- a/gnome-shell/upstream/gnome-shell-sass/widgets/_workspace-thumbnails.scss
+++ b/gnome-shell/upstream/gnome-shell-sass/widgets/_workspace-thumbnails.scss
@@ -13,7 +13,7 @@
 
   // drag and drop indicator
   .placeholder {
-    background-image: url("resource:///org/gnome/shell/theme/workspace-placeholder.svg");
+    background-image: url("workspace-placeholder.svg");
     background-size: contain;
     width: 18px;
   }
