--- a/gnome-shell/src/gnome-shell-sass/widgets/_panel.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_panel.scss
@@ -1,7 +1,8 @@
 /* Top Bar */
 // a.k.a. the panel
 
-$panel_corner_radius: $base_border_radius+1;
+$panel_corner_radius: 0;
+// $panel_corner_radius: $base_border_radius+1;
 $panel_bg_color: #000;
 $panel_fg_color: #ddd;
 $panel_height: 2.2em;
@@ -133,3 +134,115 @@ $panel_transition_duration: 250ms; // same as the overview transition duration
   padding: 0 $base_padding;
   spacing: $base_spacing;
 }
+
+// Custom
+// ----------------------------------------------------------
+#panelLeft,
+#panelCenter,
+#panelRight {
+  spacing: 0px;
+}
+
+#panel .panel-button {
+  -natural-hpadding: 12px;
+  -minimum-hpadding: 10px;
+  padding-left: 6px;
+  padding-right: 6px;
+}
+
+#panel .panel-button > .system-status-icon {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+#panel .panel-button .panel-status-indicators-box > * {
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#panel .panel-button .panel-status-indicators-box:first-child {
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#panel .panel-button .panel-status-indicators-box {
+  spacing: 4px;
+}
+
+#panel #panelActivities,
+#panel .system-tray-icons,
+#panel .desktop-name-label {
+  -natural-hpadding: 10px;
+  -minimum-hpadding: 8px;
+}
+
+#panel .system-tray-icons .panel-status-indicators-box {
+  spacing: 10px;
+}
+
+#panel .panel-button.clock-display {
+  -natural-hpadding: 0px;
+  -minimum-hpadding: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+#panel .clock-display-box .clock {
+  padding-left: 18px;
+  padding-right: 18px;
+}
+
+#panel .clock-display-box StIcon:last-child {
+  margin-right: 3px;
+}
+
+#panel .window-controls-container {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+#panelLeft .window-controls-container:first-child {
+  margin-left: 0px;
+}
+
+#panelRight .window-controls-container:last-child {
+  margin-right: 0px;
+}
+
+#panel .panel-button.window-controls {
+  -natural-hpadding: 0px;
+  -minimum-hpadding: 0px;
+}
+
+#panel .window-controls-box {
+  spacing: 2px;
+}
+
+#panel .window-controls-box .window-button {
+  width: 22px;
+}
+
+#panelLeft .window-controls-container:first-child .window-button:first-child {
+  padding-left: 3px;
+}
+
+#panelRight .window-controls-container:last-child .window-button:last-child {
+  padding-right: 3px;
+}
+
+#panel .window-controls-box .icon {
+  background-color: transparent;
+  border-radius: 0;
+  box-shadow: none;
+  border: 0;
+}
+
+#panelRight > :last-child {
+  margin-left: 13px;
+  border-left-width: 3px;
+  border-color: #feb573;
+}
+
+// #panelLeft .panel-button {
+//   width: 500px !important;
+// }
