style: some stuff

--- a/gtk/src/light/gtk-3.0/_apps.scss
+++ b/gtk/src/light/gtk-3.0/_apps.scss
@@ -53,7 +53,7 @@ list.tweak-categories separator {
 // gitlab.gnome.org/GNOME/nautilus/blob/master/src/resources/css/Adwaita.css
 .disk-space-display {
   $disk_space_unknown: #888;
-  $disk_space_used: #FEB573;
+  $disk_space_used: #feb573;
   $disk_space_free: #eeeeec;
   border-style: solid;
   border-width: 2px;
