--- a/gtk/src/light/gtk-3.0/_ubuntu-colors.scss
+++ b/gtk/src/light/gtk-3.0/_ubuntu-colors.scss
@@ -12,10 +12,10 @@ $ash: #878787;
 
 // Utility
 $red: if($variant=='light', #E56A54, #EA9090);
-$orange: if($variant=='light', #FFAD00, #FBB86C);
+$orange: if($variant=='light', #FFAD00, #feb573);
 $yellow: if($variant=='light', #FEDB40, #F9D87A);
-$green: if($variant=='light', #FFAD00, #FBB86C);
-$blue: if($variant=='light', #FFAD00, #FEB573);
+$green: if($variant=='light', #FFAD00, #feb573);
+$blue: if($variant=='light', #FFAD00, #feb573);
 $purple: if($variant=='light', #CF7DFF, #D58CFF);
 
 // Terminal colors
