--- a/gtk/src/light/gtk-4.0/_pop_os-palette.scss
+++ b/gtk/src/light/gtk-4.0/_pop_os-palette.scss
@@ -1,7 +1,7 @@
 
 // Orange
-$orange: if($variant=='light', #FFAD00, #FBB86C);
-$highlights_orange: if($variant=='light', #FBB86C, #FFAD00);
+$orange: if($variant=='light', #FFAD00, #feb573);
+$highlights_orange: if($variant=='light', #feb573, #FFAD00);
 $text_orange: if($variant=='light', #AF5C02, #FFD7A1);
 
 // blue
