--- a/gnome-shell/src/gnome-shell-sass/_colors.scss
+++ b/gnome-shell/src/gnome-shell-sass/_colors.scss
@@ -12,7 +12,7 @@ $dark_fg_color: $light_ui_300;
 
 
 $selected_fg_color: #000;
-$selected_bg_color: if($variant=='light', #FFAD00, #FEB573);
+$selected_bg_color: if($variant=='light', #FFAD00, #feb573);
 
 $selected_borders_color: if($variant== 'light', darken($selected_bg_color, 15%), darken($selected_bg_color, 30%));
 
@@ -23,7 +23,7 @@ $link_visited_color: if($variant == 'light', darken($selected_bg_color, 20%), li
 
 $warning_color: $text_yellow;
 $error_color: $text_red;
-$success_color: if($variant=='light', #FFAD00, #FBB86C);
+$success_color: if($variant=='light', #FFAD00, #feb573);
 $destructive_color: if($variant=='light', #E56A54, #EA9090);
 
 $osd_fg_color: $light_ui_300;
