--- a/gnome-shell/src/gnome-shell-sass/_drawing.scss
+++ b/gnome-shell/src/gnome-shell-sass/_drawing.scss
@@ -23,7 +23,7 @@
   @else { box-shadow: $shadow1; }
 }
 
-$orange: if($variant=='light', #FFAD00, #FBB86C);
+$orange: if($variant=='light', #FFAD00, #feb573);
 
 // entries
 
@@ -207,7 +207,7 @@ $button_bg_color: mix($tc, $c, 5%);
     &:focus {
       box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.4);
     }
-    &:hover, &:focus { 
+    &:hover, &:focus {
       background-color: lighten($selected_bg_color, 5%);
       color: lighten($selected_fg_color, 5%);
     }
