--- a/gnome-shell/src/gnome-shell-sass/_pop-os-colors.scss
+++ b/gnome-shell/src/gnome-shell-sass/_pop-os-colors.scss
@@ -1,18 +1,18 @@
 
 // Orange
-$orange: if($variant=='light', #FFAD00, #FBB86C);
-$highlights_orange: if($variant=='light', #FBB86C, #FFAD00);
+$orange: if($variant=='light', #FFAD00, #feb573);
+$highlights_orange: if($variant=='light', #feb573, #FFAD00);
 $text_orange: if($variant=='light', #AF5C02, #FFD7A1);
 
 // blue
-$blue: if($variant=='light', #FFAD00, #FEB573);
-$highlights_blue: if($variant=='light', #FEB573, #FFAD00);
-$text_blue: if($variant=='light', #00496D, #FEB573);
+$blue: if($variant=='light', #63B1BC, #6ACAD8);
+$highlights_blue: if($variant=='light', #6ACAD8, #63B1BC);
+$text_blue: if($variant=='light', #00496D, #94EBEB);
 
 // green
-$green: if($variant=='light', #FFAD00, #FBB86C);
-$highlights_green: if($variant=='light', #FBB86C, #FFAD00);
-$text_green: if($variant=='light', #FFAD00, #FBB86C);
+$green: if($variant=='light', #82BF8C, #90CFB0);
+$highlights_green: if($variant=='light', #90CFB0, #82BF8C);
+$text_green: if($variant=='light', #3B6E43, #ACF7D2);
 
 // red
 $red: if($variant=='light', #E56A54, #EA9090);
@@ -82,7 +82,7 @@ $gdm_grey: #36322f;
 $close_button_color: mix($orange, $red, 50%);
 
 //Colors for certain widgets
-$entry_color: if($variant=='light', #FFAD00, #FBB86C);
+$entry_color: if($variant=='light', #FFAD00, #feb573);
 $close_button_color: mix(#E56A54, #FFAD00, 50%);
 
 $panel_bg_color: darken(#2B2928, 3%);;
