--- a/gtk/src/light/gtk-3.0/_colors-pop.scss
+++ b/gtk/src/light/gtk-3.0/_colors-pop.scss
@@ -9,7 +9,7 @@ $bg_color: if($variant == 'light', #F6F6F6, #303030);
 $fg_color: if($variant == 'light', #292929, #cccccc);
 
 $selected_fg_color: #000;
-$selected_bg_color: if($variant=='light', #FFAD00, #FBB86C);
+$selected_bg_color: if($variant=='light', #FFAD00, #feb573);
 
 $borders_color: if($variant == 'light', rgba(darken($bg_color, 18%), 0.5), rgba(darken($bg_color, 10%), 0.5));
 $alt_borders_color: if($variant == 'light', rgba(darken($bg_color, 24%), 0.5), rgba(darken($bg_color, 18%), 0.5));
@@ -19,7 +19,7 @@ $link_visited_color: $text_orange;
 $headerbar_color: if($variant == 'light', #574F4A, #363636);
 $warning_color: if($variant=='light', #FEDB40, #FFF19E);
 $error_color: if($variant=='light', #E56A54, #EA9090);
-$success_color: if($variant=='light', #FFAD00, #FBB86C);
+$success_color: if($variant=='light', #FFAD00, #feb573);
 $destructive_color: if($variant=='light', #E56A54, #EA9090);
 
 $osd_bg_color: transparentize(darken(desaturate(#3d3846, 100%), 4%),0.3);
@@ -27,11 +27,11 @@ $osd_bg_color: transparentize(darken(desaturate(#3d3846, 100%), 4%),0.3);
 $backdrop_selected_fg_color: rgba($selected_fg_color, 0.6);
 
 //special cased widget colors
-$suggested_bg_color: if($variant=='light', #FFAD00, #FBB86C);
+$suggested_bg_color: if($variant=='light', #FFAD00, #feb573);
 $suggested_border_color: if($variant=='light', darken($suggested_bg_color, 15%), $suggested_bg_color);
-$progress_bg_color: if($variant=='light', #FFAD00, #FBB86C);
+$progress_bg_color: if($variant=='light', #FFAD00, #feb573);
 $progress_border_color: if($variant=='light', darken($progress_bg_color, 15%), darken($progress_bg_color, 30%));
-$checkradio_bg_color: if($variant=='light', #FFAD00, #FBB86C);
+$checkradio_bg_color: if($variant=='light', #FFAD00, #feb573);
 $checkradio_fg_color: #000;
 $checkradio_borders_color: $checkradio_bg_color;
 $spinner_fg_color: $fg_color;
